# FastAPI-PyPoetry-Template

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: python-app.yml
fastAPI-Learning/: database.py
frontend/my-react-app/: package-lock.json
my-fastapi-app/: Dockerfile  main.py  pyproject.toml
my-fastapi-app/database/: database.py  database_connection.py
my-fastapi-app/endpoints/chat/: ChatController.py  ChatModel.py  ChatSchema.py
my-fastapi-app/endpoints/message/: MessageController.py  MessageSchema.py  MessageService.py
my-fastapi-app/tests/endpoints/chat/: test_chat_controller.py
my-fastapi-app/tests/sqlite/: sqlite_database.py
my-react-app/: Dockerfile  README.md  package-lock.json  package.json
my-react-app/src/: App.js  styles.css
my-react-app/src/components/: ChatList.js  MessageList.css  MessageList.js
my-react-app/src/services/: api.js
myApp/: database.py  main.py  pytest.ini  settings.py  test_database.py  test_main.py
myApp/DAOs/: ChatDAO.py
myApp/DTOs/: ChatDTO.py  MessageDTO.py
myApp/Services/: ChatService.py
myApp/controllers/: ChatController.py  MessageController.py
myApp/endpoints/chat/: ChatController.py  ChatModel.py  ChatSchema.py  ChatService.py
myApp/endpoints/message/: MessageController.py  MessageModel.py  MessageSchema.py  MessageService.py
myApp/tests/: test_app.py  test_chat_controller.py  test_database.py  test_in_memory_database.py  test_main.py
myApp/tests/sqlite/: burn.py  test_data.py  test_database.py  test_in_memory_database.py
(+12 files in other folders)
