[tool.poetry]
name = "fastapi-pypoetry-template"
version = "0.1.0"
description = ""
authors = ["BruceMcD <162571835+BruceMcD@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

